objects/SFDC_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resume_Date__c</fullName>
        <description>Resume Date if on hold.</description>
        <inlineHelpText>Enter resume date if this is hold.</inlineHelpText>
        <label>Resume Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <label>SFDC Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed-Accepted</fullName>
                </value>
                <value>
                    <fullName>Closed-Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Change Request</label>
    <nameField>
        <label>Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>